deploy: ce32b6b92ac5bdb3af1c5b5ae4bdeb14da36d76a

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -138,10 +138,10 @@
 <li><a href="sigkit/metrics/integrity.html">sigkit.metrics.integrity</a></li>
 <li><a href="sigkit/metrics/visuals.html">sigkit.metrics.visuals</a></li>
 <li><a href="sigkit/modem/base.html">sigkit.modem.base</a></li>
+<li><a href="sigkit/modem/fsk.html">sigkit.modem.fsk</a></li>
 <li><a href="sigkit/modem/psk.html">sigkit.modem.psk</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
 <li><a href="sigkit/transforms/phase_shift.html">sigkit.transforms.phase_shift</a></li>
-<li><a href="sigkit/transforms/utils.html">sigkit.transforms.utils</a></li>
 </ul>
 
             <div class="clearer"></div>
@@ -166,7 +166,7 @@
 
 
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2025, Isaiah Harville, Joshua Payne.
+    &#169; Copyright 2025, Isaiah Harville and Joshua Payne.
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.3.
     </div>
 
