--- a/_modules/sigkit/transforms/awgn.html
+++ b/_modules/sigkit/transforms/awgn.html
@@ -140,7 +140,7 @@
 <div class="viewcode-block" id="ApplyAWGN">
 <a class="viewcode-back" href="../../../api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">ApplyAWGN</span><span class="p">(</span><span class="n">nn</span><span class="o">.</span><span class="n">Module</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Additive White Gaussian Noise Torch Transform with optional SNR range.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Applies Additive White Gaussian Noise to reach a target SNR.</span>
 
 <span class="sd">    Args:</span>
 <span class="sd">        snr_db:</span>
@@ -223,7 +223,7 @@
 
 
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2025, Isaiah Harville, Joshua Payne.
+    &#169; Copyright 2025, Isaiah Harville and Joshua Payne.
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.3.
     </div>
 
