--- a/_modules/sigkit/impairments/phase_shift.html
+++ b/_modules/sigkit/impairments/phase_shift.html
@@ -215,7 +215,7 @@
 
 
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2025, Isaiah Harville, Joshua Payne.
+    &#169; Copyright 2025, Isaiah Harville and Joshua Payne.
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.3.
     </div>
 
