--- a/genindex.html
+++ b/genindex.html
@@ -139,7 +139,6 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
- | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -178,8 +177,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.carrier_frequency">carrier_frequency (sigkit.core.base.Signal attribute)</a>
 </li>
-      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D">ComplexTo2D (class in sigkit.transforms.utils)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -189,6 +186,8 @@
       <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem.demodulate">demodulate() (sigkit.modem.base.Modem method)</a>
 
       <ul>
+        <li><a href="api/sigkit.modem.html#sigkit.modem.fsk.FSK.demodulate">(sigkit.modem.fsk.FSK method)</a>
+</li>
         <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK.demodulate">(sigkit.modem.psk.PSK method)</a>
 </li>
       </ul></li>
@@ -215,14 +214,12 @@
       <ul>
         <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">(sigkit.transforms.phase_shift.ApplyPhaseShift method)</a>
 </li>
-        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D.forward">(sigkit.transforms.utils.ComplexTo2D method)</a>
-</li>
-        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize.forward">(sigkit.transforms.utils.Normalize method)</a>
-</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.impairments.html#sigkit.impairments.frequency_shift.FrequencyShift">FrequencyShift (class in sigkit.impairments.frequency_shift)</a>
+</li>
+      <li><a href="api/sigkit.modem.html#sigkit.modem.fsk.FSK">FSK (class in sigkit.modem.fsk)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -243,6 +240,8 @@
       <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem.modulate">modulate() (sigkit.modem.base.Modem method)</a>
 
       <ul>
+        <li><a href="api/sigkit.modem.html#sigkit.modem.fsk.FSK.modulate">(sigkit.modem.fsk.FSK method)</a>
+</li>
         <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK.modulate">(sigkit.modem.psk.PSK method)</a>
 </li>
       </ul></li>
@@ -280,6 +279,8 @@
 </li>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem.base">sigkit.modem.base</a>
 </li>
+        <li><a href="api/sigkit.modem.html#module-sigkit.modem.fsk">sigkit.modem.fsk</a>
+</li>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem.psk">sigkit.modem.psk</a>
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms">sigkit.transforms</a>
@@ -288,17 +289,7 @@
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">sigkit.transforms.phase_shift</a>
 </li>
-        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">sigkit.transforms.utils</a>
-</li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize">Normalize (class in sigkit.transforms.utils)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -443,6 +434,13 @@
 </li>
       </ul></li>
       <li>
+    sigkit.modem.fsk
+
+      <ul>
+        <li><a href="api/sigkit.modem.html#module-sigkit.modem.fsk">module</a>
+</li>
+      </ul></li>
+      <li>
     sigkit.modem.psk
 
       <ul>
@@ -468,13 +466,6 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">module</a>
-</li>
-      </ul></li>
-      <li>
-    sigkit.transforms.utils
-
-      <ul>
-        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">module</a>
 </li>
       </ul></li>
       <li><a href="api/sigkit.core.html#sigkit.core.base.SigKitError">SigKitError</a>
@@ -520,7 +511,7 @@
 
 
     <div class="footer" role="contentinfo">
-    &#169; Copyright 2025, Isaiah Harville, Joshua Payne.
+    &#169; Copyright 2025, Isaiah Harville and Joshua Payne.
       Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 8.2.3.
     </div>
 
