--- a/_modules/index.html
+++ b/_modules/index.html
@@ -142,6 +142,7 @@
 <li><a href="sigkit/modem/psk.html">sigkit.modem.psk</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
 <li><a href="sigkit/transforms/phase_shift.html">sigkit.transforms.phase_shift</a></li>
+<li><a href="sigkit/transforms/utils.html">sigkit.transforms.utils</a></li>
 </ul>
 
             <div class="clearer"></div>
