--- a/genindex.html
+++ b/genindex.html
@@ -139,7 +139,9 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  
@@ -177,6 +179,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.carrier_frequency">carrier_frequency (sigkit.core.base.Signal attribute)</a>
 </li>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D">ComplexTo2D (class in sigkit.transforms.utils)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -213,6 +217,10 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">(sigkit.transforms.phase_shift.ApplyPhaseShift method)</a>
+</li>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D.forward">(sigkit.transforms.utils.ComplexTo2D method)</a>
+</li>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize.forward">(sigkit.transforms.utils.Normalize method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -289,7 +297,17 @@
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">sigkit.transforms.phase_shift</a>
 </li>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">sigkit.transforms.utils</a>
+</li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.Normalize">Normalize (class in sigkit.transforms.utils)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -315,6 +333,14 @@
       <li><a href="api/sigkit.datasets.html#sigkit.datasets.procedural.ProceduralDataset">ProceduralDataset (class in sigkit.datasets.procedural)</a>
 </li>
       <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK">PSK (class in sigkit.modem.psk)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.RandomApplyProb">RandomApplyProb (class in sigkit.transforms.utils)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -396,8 +422,6 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.phase_shift">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.metrics
 
@@ -405,6 +429,8 @@
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.metrics.integrity
 
@@ -466,6 +492,13 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.transforms.utils
+
+      <ul>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.utils">module</a>
 </li>
       </ul></li>
       <li><a href="api/sigkit.core.html#sigkit.core.base.SigKitError">SigKitError</a>
