deploy: 8a30ad4fd5c02f5763456dd4881fe073c47477db

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -141,6 +141,7 @@
 <li><a href="sigkit/modem/fsk.html">sigkit.modem.fsk</a></li>
 <li><a href="sigkit/modem/psk.html">sigkit.modem.psk</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
+<li><a href="sigkit/transforms/frequency_shift.html">sigkit.transforms.frequency_shift</a></li>
 <li><a href="sigkit/transforms/phase_shift.html">sigkit.transforms.phase_shift</a></li>
 <li><a href="sigkit/transforms/utils.html">sigkit.transforms.utils</a></li>
 </ul>
