--- a/genindex.html
+++ b/genindex.html
@@ -163,6 +163,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN">ApplyAWGN (class in sigkit.transforms.awgn)</a>
 </li>
+      <li><a href="api/sigkit.transforms.html#sigkit.transforms.frequency_shift.ApplyFrequencyShift">ApplyFrequencyShift (class in sigkit.transforms.frequency_shift)</a>
+</li>
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift">ApplyPhaseShift (class in sigkit.transforms.phase_shift)</a>
 </li>
       <li><a href="api/sigkit.impairments.html#sigkit.impairments.awgn.AWGN">AWGN (class in sigkit.impairments.awgn)</a>
@@ -216,6 +218,8 @@
       <li><a href="api/sigkit.transforms.html#sigkit.transforms.awgn.ApplyAWGN.forward">forward() (sigkit.transforms.awgn.ApplyAWGN method)</a>
 
       <ul>
+        <li><a href="api/sigkit.transforms.html#sigkit.transforms.frequency_shift.ApplyFrequencyShift.forward">(sigkit.transforms.frequency_shift.ApplyFrequencyShift method)</a>
+</li>
         <li><a href="api/sigkit.transforms.html#sigkit.transforms.phase_shift.ApplyPhaseShift.forward">(sigkit.transforms.phase_shift.ApplyPhaseShift method)</a>
 </li>
         <li><a href="api/sigkit.transforms.html#sigkit.transforms.utils.ComplexTo2D.forward">(sigkit.transforms.utils.ComplexTo2D method)</a>
@@ -294,6 +298,8 @@
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms">sigkit.transforms</a>
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.awgn">sigkit.transforms.awgn</a>
+</li>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.frequency_shift">sigkit.transforms.frequency_shift</a>
 </li>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.phase_shift">sigkit.transforms.phase_shift</a>
 </li>
@@ -485,6 +491,13 @@
 
       <ul>
         <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.awgn">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.transforms.frequency_shift
+
+      <ul>
+        <li><a href="api/sigkit.transforms.html#module-sigkit.transforms.frequency_shift">module</a>
 </li>
       </ul></li>
       <li>
